#YST-16 Added remaining configuration on the page

--- a/templates/snippet.html.twig
+++ b/templates/snippet.html.twig
@@ -5,3 +5,4 @@
     <label>{% trans %}Content analysis{% endtrans %}</label>
     <div id="{{ output_target_id }}"></div>
 </div>
+<div id="yoast-seo-overall-score"></div>
