--- a/templates/overall_score.html.twig
+++ b/templates/overall_score.html.twig
@@ -1,7 +1,12 @@
 <div id="{{ overall_score_target_id }}" class="overallScore {{ overall_score }}">
     <div class="score_circle">
     </div>
-    <span class="score_title">
-        {% trans %}SEO{% endtrans %}: <strong>{{ overall_score }}</strong>
-    </span>
+    <div class="score">
+        <span class="score_title">
+        {% trans %}SEO{% endtrans %}:
+        </span>
+        <span class="score_value">
+            {{ overall_score }}
+        </span>
+    </div>
 </div>
