--- a/templates/snippet.html.twig
+++ b/templates/snippet.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ wrapper_target_id }}">
-    <div id="{{ wpseo_meta }}"></div>
+    <div id="wpseo_meta"></div>
     <label>{% trans %}Snippet editor{% endtrans %}</label>
     <div id="{{ snippet_target_id }}"></div>
     <label>{% trans %}Content analysis{% endtrans %}</label>
