--- a/templates/overall_score.html.twig
+++ b/templates/overall_score.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ overall_score_target_id }}" class="overallScore {{ overall_score }}">
+<div {% if overall_score_target_id %}id="{{ overall_score_target_id }}"{% endif %} class="yoast_overall_score overallScore {{ overall_score }}">
     <div class="score_circle">
     </div>
     <div class="score">
