--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -181,5 +181,12 @@
   cursor: text;
   background-color: #bbdefb;
 }
+div.yoast_newsletter_subscription{
+    margin-top: 2em;
+}
+
+div.yoast_newsletter_subscription a.button{
+    margin-top: 1.5em;
+}
 
 /*# sourceMappingURL=yoast_seo.css.map */
