YST-57 Refactor/clean code, fix some bugs

--- a/css/yoast_seo_score.css
+++ b/css/yoast_seo_score.css
@@ -1,3 +1,7 @@
+.js-form-item-field-yoast-seo-0-yoast-seo-focus-keyword  {
+    width: 554px;
+}
+
 .yoast-seo-score-widget {
     margin: 20px 0px;
     padding: 0px 0px 0px 20px;
