--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -54,19 +54,19 @@
 #yoast-wrapper li .score {
   list-style-type: none;
 }
-#yoast-wrapper .wpseoanalysis {
+.wpseoanalysis {
   margin-left: 0;
   list-style: none;
 }
-#yoast-wrapper .wpseoanalysis li {
+.wpseoanalysis li {
   margin: 3px 0;
   line-height: auto;
 }
-#yoast-wrapper .wpseo-score-text {
+.wpseo-score-text {
   display: inline-block;
   width: 90%;
 }
-#yoast-wrapper .wpseo-score-icon {
+.wpseo-score-icon {
   display: inline-block;
   width: 12px;
   height: 12px;
@@ -75,25 +75,25 @@
   border-radius: 50%;
   background: #888;
 }
-#yoast-wrapper .wpseo-score-icon.good {
+.wpseo-score-icon.good {
   background-color: #7ad03a;
 }
-#yoast-wrapper .wpseo-score-icon.ok {
+.wpseo-score-icon.ok {
   background-color: #ffba00;
 }
-#yoast-wrapper .wpseo-score-icon.poor {
+.wpseo-score-icon.poor {
   background-color: #ee7c1b;
 }
-#yoast-wrapper .wpseo-score-icon.bad {
+.wpseo-score-icon.bad {
   background-color: #dd3d36;
 }
-#yoast-wrapper .wpseo-score-icon.na {
+.wpseo-score-icon.na {
   background-color: #999;
 }
-#yoast-wrapper .wpseo-score-icon.noindex {
+.wpseo-score-icon.noindex {
   background-color: #1e8cbe;
 }
-#yoast-wrapper .wpseo_msg {
+.wpseo_msg {
   margin: 5px 0 10px 0;
   padding: 0 5px;
   border: 1px solid #e6db55;
@@ -163,7 +163,7 @@
   padding: 20px;
   border: 1px solid #ddd;
 }
-#yoast-wrapper .screen-reader-text {
+.screen-reader-text {
   position: absolute !important;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
