Revert "Made newsletter stand-out less"
This reverts commit 16d6ccf43ae646c99699eed53b17b6c4b2efade8.

--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -184,3 +184,9 @@
 div.yoast_newsletter_subscription{
     margin-top: 2em;
 }
+
+div.yoast_newsletter_subscription a.button{
+    margin-top: 1.5em;
+}
+
+/*# sourceMappingURL=yoast_seo.css.map */
