--- a/templates/newsletter.html.twig
+++ b/templates/newsletter.html.twig
@@ -1,5 +1,7 @@
-<div class="yoast_newsletter_subscription">
-  <p><strong>{% trans % }Yoast SEO for Drupal newsletter{% endtrans % }</strong></p>
-  <p>{% trans %}Our newsletter contains loads of tips and tricks about how to optimize your SEO{% endtrans %}.
-  &nbsp; <a href="{{ newsletter_link }}" target="_blank">{% trans %}Subscribe here{% endtrans %}</a>.</p>
+<div class="yoast_newsletter_subscription messages messages--info">
+    <div class="label">Yoast SEO Newsletter</div>
+    <p>
+        {% trans %}Our newsletter contains loads of tips and tricks about how to optimize your SEO{% endtrans %}.
+        <a href="{{ newsletter_link }}" target="_blank" class="button">{% trans %}Subscribe here{% endtrans %}</a>
+    </p>
 </div>
