--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -18,7 +18,7 @@
 
 .snippet-editor__container {
   position: relative;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .snippet-editor__heading {
@@ -46,7 +46,7 @@
   background-size: 16px;
   padding-left: 45px;
 }
-
+/**
 .snippet-editor__container:hover:before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23bfbfbf%22%20d%3D%22M1152%20896q0%2026%2D19%2045l%2D448%20448q%2D19%2019%2D45%2019t%2D45%2D19%2D19%2D45v%2D896q0%2D26%2019%2D45t45%2D19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E");
   position: absolute;
@@ -71,9 +71,10 @@
   height: 24px;
   background-size: 25px;
 }
+*/
 
 .snippet-editor__preview {
-  padding: 15px 20px;
+  padding: 15px 0;
 }
 
 .snippet-editor__button {
@@ -109,6 +110,7 @@
   margin-top: 0;
 }
 
+/**
 .snippet-editor__label--hover:before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23bfbfbf%22%20d%3D%22M1152%20896q0%2026%2D19%2045l%2D448%20448q%2D19%2019%2D45%2019t%2D45%2D19%2D19%2D45v%2D896q0%2D26%2019%2D45t45%2D19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E");
   position: absolute;
@@ -134,7 +136,7 @@
   background-size: 25px;
   top: 20px;
 }
-
+*//
 .snippet-editor__input {
   display: block;
   width: 100%;
