Ensure that all Yoast checks can actually pass
Implements the pageTitleWidth check among others.

--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -170,7 +170,7 @@
 
 .snippet_container .title {
   color: #1e0fbe;
-  display: block;
+  display: inline;
   overflow: hidden;
   text-overflow: ellipsis;
   text-decoration: none;
