--- a/css/yoast_seo.css
+++ b/css/yoast_seo.css
@@ -77,6 +77,30 @@
   padding: 15px 0;
 }
 
+.snippet-editor__preview .title.editable,
+.snippet-editor__preview .desc.editable {
+  cursor: text;
+}
+
+.snippet-editor__preview .title.editable:focus,
+.snippet-editor__preview .desc.editable:focus {
+  display: block;
+  box-sizing: border-box;
+  padding: .3em .4em .3em .5em;
+  max-width: 100%;
+  border: 1px solid #b8b8b8;
+  border-top-color: #999;
+  background: #fff;
+  color: #333;
+  border-radius: 2px;
+  background: #fcfcfa;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .125);
+  font-size: 1em;
+  color: #595959;
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+  transition: border linear 0.2s, box-shadow linear 0.2s;
+}
+
 .snippet-editor__button {
   background: #f7f7f7;
   border: 1px solid #dbdbdb;
@@ -136,7 +160,8 @@
   background-size: 25px;
   top: 20px;
 }
-*//
+*/
+
 .snippet-editor__input {
   display: block;
   width: 100%;
